tests/negative/circular_import.far
import fixtures.circ_a
import fixtures.circ_b

fun main() -> i64 {
  return circ_b.val_b()
}
